--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,55 +3,19 @@ name: Node CI
 on: [push]
 
 jobs:
-  build-ubuntu:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 13.x]
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+  code-coverage:
+    runs-on: ${{ matrix.os }}
+      - name: Codecov
+        uses: actions/checkout@master
+        uses: codecov/codecov-action@v1.0.4
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
-        run: |
-          npm i -g npm
-          npm install
-          npm ci
-          npm run build --if-present
-          npm test
-        env:
-          CI: true
-  build-windows:
-    runs-on: ubuntu-latest
+          token: ${{ secrets.CODECOV_TOKEN }}
+  run:
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 13.x]
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
-        run: |
-          npm i -g npm
-          npm install
-          npm ci
-          npm run build --if-present
-          npm test
-        env:
-          CI: true
-  build-mac:
-    runs-on: macOS-latest
-
-    strategy:
-      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         node-version: [10.x, 12.x, 13.x]
 
     steps:
