--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,14 +3,7 @@ name: Node CI
 on: [push]
 
 jobs:
-  code-coverage:
-    runs-on: ${{ matrix.os }}
-      - name: Codecov
-        uses: actions/checkout@master
-        uses: codecov/codecov-action@v1.0.4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-  run:
+  test:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -33,3 +26,8 @@ jobs:
           npm test
         env:
           CI: true
+      - name: Codecov
+        uses: actions/checkout@master
+        uses: codecov/codecov-action@v1.0.4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
