--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,13 +18,16 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
-        run: |
-          npm i -g npm
-          npm install
-          npm ci
-          npm run build --if-present
-          npm test
+      - name: Yarn install, build, test
+        uses: Borales/actions-yarn@v2.1.0
+        with:
+          cmd: install
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: build
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: test
         env:
           CI: true
       - name: Codecov
