--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,15 +19,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: yarn install, build, and test
+        if: matrix.os != 'windows-latest'
         run: |
           npm i -g yarn
           yarn install
           yarn build
           yarn test
+        if: matrix.os == 'windows-latest'
+        run: npm i -g yarn && yarn install && yarn build && yarn test
         env:
           CI: true
       - name: Codecov
         uses: codecov/codecov-action@v1.0.4
-        if: matrix.os != 'windows-latest' && matrix.os  != 'macos-latest'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
