--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,7 +3,7 @@ name: Node CI
 on: [push]
 
 jobs:
-  test:
+  test-unix:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -18,15 +18,21 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: yarn install, build, and test
-        if: matrix.os != 'windows-latest'
-        run: |
-          npm i -g yarn
-          yarn install
-          yarn build
-          yarn test
-        if: matrix.os == 'windows-latest'
-        run: npm i -g yarn && yarn install && yarn build && yarn test
+      - name: Setup yarn
+        run: npm i -g yarn
+
+      - name: Install
+        run: yarn install
+
+      - name: Lint
+        run: yarn lint
+
+      - name: Test
+        run: yarn test
+
+      - name: Build
+        run: yarn build
+
         env:
           CI: true
       - name: Codecov
