--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,11 +3,11 @@ name: Node CI
 on: [push]
 
 jobs:
-  test-unix:
+  run:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      fail-fast: false
+      # fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node-version: [10.x, 12.x, 13.x]
