--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@iwatakeshi/sakura",
   "version": "2.0.1",
   "description": "A unit of a data structure to build elegant trees or cherry blossoms",
-  "main": "lib/main.js",
+  "source": "src/main.ts",
+  "module": "dist/module.js",
+  "types": "dist/main.d.ts",
+  "main": "dist/main.js",
   "repository": "github:iwatakeshi/sakura",
   "author": "Takeshi Iwana <iwatakeshi@gmail.com>",
   "license": "MIT",
@@ -10,24 +13,27 @@
     "lib/**/*"
   ],
   "devDependencies": {
-    "@oclif/tslint": "^3.1.1",
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.23",
-    "jest": "^26.1.0",
-    "ts-jest": "^26.1.2",
+    "@parcel/transformer-typescript-types": "2.4.1",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "jest": "^27.5.1",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.4.1",
+    "prettyjson": "^1.2.5",
+    "process": "^0.11.10",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.6"
+    "typescript": "^4.6.3",
+    "util": "^0.12.4"
   },
   "scripts": {
-    "prepare": "yarn build",
-    "preversion": "yarn run lint",
-    "prepublishOnly": "yarn test",
     "build": "tsc",
     "test": "jest",
-    "lint": "tslint -p . -t stylish",
-    "lint:fix": "tslint -p . -t stylish --fix"
+    "check": "tsc --noEmit",
+    "go": "yarn build && node dist/main.js"
   },
-  "types": "lib/main.d.ts",
   "keywords": [
     "data structure",
     "tree",
@@ -35,5 +41,8 @@
     "sakura",
     "array",
     "javascript"
-  ]
+  ],
+  "dependencies": {
+    "rambdax": "^8.0.1"
+  }
 }
