--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
     "lib/**/*"
   ],
   "devDependencies": {
-    "@parcel/transformer-typescript-types": "2.4.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "jest": "^27.5.1",
+    "@parcel/transformer-typescript-types": "2.8.3",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.15.0",
+    "jest": "^29.5.0",
     "os-browserify": "^0.3.0",
-    "parcel": "^2.4.1",
+    "parcel": "^2.8.3",
+    "prettier": "^2.8.4",
     "prettyjson": "^1.2.5",
     "process": "^0.11.10",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "tslint": "^6.1.2",
-    "typescript": "^4.6.3",
-    "util": "^0.12.4"
+    "tsx": "^3.12.3",
+    "typescript": "^4.9.5",
+    "util": "^0.12.5"
   },
   "scripts": {
+    "start": "npm run build && node dist/main.js",
     "build": "tsc",
     "test": "jest",
-    "check": "tsc --noEmit",
-    "go": "yarn build && node dist/main.js"
+    "check": "tsc --noEmit"
   },
   "keywords": [
     "data structure",
@@ -43,6 +45,6 @@
     "javascript"
   ],
   "dependencies": {
-    "rambdax": "^8.0.1"
+    "rambdax": "^9.0.0"
   }
 }
